--- a/index.html
+++ b/index.html
@@ -6,10 +6,16 @@
     <meta name="keywords" content="Сайт, html, Стоматология в Хмельницькому">
     <meta name="description" content="Дякуємо Вам за довіру">
     <link rel="shortcut icon" href="https://sitename.ru/favicon.ico"/>
+    <link rel="stylesheet" href="style.css">
+    <style>
+      table (
+        color:green
+        )
+    </style>
 
   </head>
   <body>
-    <h1>Cтоматология в Хмельницькому</h1>
+    <h1 class="sfdf">Cтоматология в Хмельницькому</h1 class="sfdf">
     <h2>Cтоматология в Хмельницькому</h2>
     <p>Ренген зубов</p>
     <p><b>Етапи лікування каналів зубів.</b> <br> <em> 1.Механічна обробка та чищення каналів зуба.</em></p>
@@ -18,21 +24,25 @@
     <a href="https://www.youtube.com/watch?v=zzb2BbERUcE">
         Лікування глубокого карієсу
     <br>
-    <a href="#ideveloper"></a>
+    <a href="#ideveloper">Германия</a>
 
-    <ul>
-      <li> Лечение пародонтита</li>
+    <ul class="list">
+      <li height="150"> Лечение пародонтита</li>
       <li> Чистка зубов </li>
       <li>Лечение парадонтоза</li>
       <li>Шинирование зубов</li>
-      <li> <a href="https://https://www.google.com/"> google</a> ссылка на главную страницу </li>
-    </ul>
+      <li> <a href="C:\Users\Lena\Desktop\germany.html"> google</a> ссылка на главную страницу </li>
+      <ul>
+        <li> Второй уровень </li>
+        <li>Второй уровень2</li>
+      </ul>
+    </ul class="list">
       <hr>ffdfdff
 
       <table border="5">
         <thead>
           <tr>
-            <th>Наименование фрукта</th>
+            <th height="150">Наименование фрукта</th>
             <th>Количество</th>
           </tr>
         </thead>
@@ -48,12 +58,12 @@
         </tbody>
         <tfoot>
           <tr>
-            <td> colspan="2">Итог: 5</td>
+            <td colspan="2">Итого: 5</td>
           </tr>
         </tfoot>
       </table>
 
-      <img src="https://st4.depositphotos.com/11433486/19987/i/600/depositphotos_199873654-stock-photo-photo-realistic-illustration-of-a.jpg" width="150" height="150">
+      <img src="https://st4.depositphotos.com/11433486/19987/i/600/depositphotos_199873654-stock-photo-photo-realistic-illustration-of-a.jpg"height="150">
 
   <br>
   <input type="text">
@@ -69,5 +79,10 @@
 
   </div>
 
+    <a class="font-size-md color-red" href="#"> Первая ссылка </a>
+    <br>
+    <a class="font-size-md color-gray" href="#">Вторая ссылка </a>
+
   </body>
 </html>
+
